ios: fixed vertical align on ipad/ios7

--- a/brunch/app/views/styles/application.styl
+++ b/brunch/app/views/styles/application.styl
@@ -14,7 +14,8 @@
   -webkit-user-select: none
   -webkit-touch-callout: none
 
-body.box-align
+body
+  absolute: top 0
   background: #000
   width: 100%
   height: 100%
@@ -120,7 +121,7 @@ body.box-align
     width: 1024px
     height: 682px
     font-size: 23px
-    top: 6%
+    top: 43px
 
   .fixedSize
     width: 1024px !important
